Computer works tried to do some styling...

--- a/GameTicTacToe/Pages/Index.razor
+++ b/GameTicTacToe/Pages/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/"
 
 <PageTitle>TicTacToe</PageTitle>
+
+<div id="PageElement">
 <h1>TicTacToe</h1>
 @if (_gameOngoing)
 {
@@ -66,6 +68,7 @@
 		<button class="btn btn-primary" type="submit">Start game</button>
 	</EditForm>
 }
+</div>
 
 
 
