--- a/GameTicTacToe/wwwroot/css/site.css
+++ b/GameTicTacToe/wwwroot/css/site.css
@@ -51,7 +51,8 @@
     width: 300px;
     height: 300px;
     font-size: 42px;
-    text-align: center;
+    position: absolute;
+    left: 43%;
 }
 
 td {
@@ -61,6 +62,7 @@ td {
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align: center;
 }
 
 h1:focus {
